--- a/src/includes/footer.pug
+++ b/src/includes/footer.pug
@@ -3,7 +3,7 @@ section(class='bg-tint-blue pb-0')
   div(class='w-1/2')
    block logo
     a(href="./index.html" , class=('text-base text-white'))
-     img(src="./assets/images/logo.png", alt="logo-finsweet" , class=('align-sub mr-[5px]'))
+     img(src="./assets/images/logo.png", alt="logo-finsweet" , class=('align-sub mr-[5px]') , loading="lazy")
      |Finsweet
    p(class="max-w-[400px] mt-[20px]") We are always open to discuss your project and improve your online presence.
    div(class='mt-[86px] px-[37px] bg-yellow columns-2 py-[18px] max-w-[570px]')
