--- a/src/pages/features.pug
+++ b/src/pages/features.pug
@@ -17,21 +17,21 @@ block content
           ul(class="flex space-x-[40px]") 
             li
               a(href="./pricing.html" , class="btn") View Pricing
-        img(src="./assets/images/feature.svg", alt="feature" , class="hero-section__img") 
+        img(src="./assets/images/feature.svg", alt="feature" , class="hero-section__img" , loading="lazy") 
   block list-images
    ul(class="container flex justify-center flex-wrap gap-9 mt-[70px] ") 
     li 
-     img(src="./assets/images/logo-6.png")
+     img(src="./assets/images/logo-6.png" , loading="lazy")
     li 
-     img(src="./assets/images/logo-1.png", alt="")      
+     img(src="./assets/images/logo-1.png", loading="lazy")      
     li 
-     img(src="./assets/images/logo-2.png", alt="") 
+     img(src="./assets/images/logo-2.png", loading="lazy") 
     li 
-     img(src="./assets/images/logo-3.png", alt="")
+     img(src="./assets/images/logo-3.png", loading="lazy")
     li 
-     img(src="./assets/images/logo-4.png", alt="")  
+     img(src="./assets/images/logo-4.png", loading="lazy")  
     li 
-     img(src="./assets/images/logo-5.png", alt="") 
+     img(src="./assets/images/logo-5.png", loading="lazy") 
   section
    block cards 
     div(class='container')
@@ -39,7 +39,7 @@ block content
      ul(class="features-list")
       each item in benefits 
        li(class="features-list_item bg-grey")
-        img(src=`./assets/images/${item.icon}`, alt=item.alt )
+        img(src=`./assets/images/${item.icon}`, alt=item.alt , loading="lazy" )
         h3=item.title 
         p=item.describe    
   block section-modulable
