--- a/src/includes/footer.pug
+++ b/src/includes/footer.pug
@@ -1,17 +1,18 @@
 section(class='bg-tint-blue pb-0')
- div(class='container flex items-start gap-[30px]')
-  div(class='w-1/2')
+ div(class='container flex items-start gap-[30px] max-xl:flex-col')
+  div(class='w-1/2 max-xl:w-full')
    block logo
     a(href="./index.html" , class=('text-base text-white'))
      img(src="./assets/images/logo.png", alt="logo-finsweet" , class=('align-sub mr-[5px]') , loading="lazy")
      |Finsweet
-   p(class="max-w-[400px] mt-[20px]") We are always open to discuss your project and improve your online presence.
-   div(class='mt-[86px] px-[37px] bg-yellow columns-2 py-[18px] max-w-[570px]')
-    h3 Email me at
-    p(class='text-[14px] text-dark-blue') contact@website.com
-    h3 Call us
-    p(class='text-[14px] text-dark-blue') 0927 6277 28525 
-  div(class='max-w-[400px]')
+   p(class="max-w-[400px] mt-[20px] max-xl:max-w-fit") We are always open to discuss your project and improve your online presence.
+   block adress
+    div(class='mt-[86px] px-[37px] bg-yellow columns-2 py-[18px] max-w-[93%] max-xl:display-none')
+     h3 Email me at
+     a(href='mailto:contact@website.com' class='text-[14px] text-dark-blue') contact@website.com
+     h3 Call us
+     a(href='tel:0927627728525' class='text-[14px] text-dark-blue') 0927 6277 28525
+  div(class='max-w-[400px] max-xl:max-w-fit')
    h2 Lets Talk!
    p(class='mt-[15px]') We are always open to discuss your project, improve your online presence and help with your UX/UI design challenges.
    block list_icons
@@ -27,7 +28,13 @@ section(class='bg-tint-blue pb-0')
        i(class="fa-brands fa-instagram") 
      li
       a(href="https://www.linkedin.com/company/linkd-pro" target="_blank") 
-       i(class="fa-brands fa-linkedin")       
+       i(class="fa-brands fa-linkedin")   
+  block adress
+    div(class='display-none px-[37px] bg-yellow columns-2 py-[18px] max-w-full max-xl:block')
+     h3 Email me at
+     a(href='mailto:contact@website.com' class='text-[14px] text-dark-blue') contact@website.com
+     h3 Call us
+     a(href='tel:0927627728525' class='text-[14px] text-dark-blue') 0927 6277 28525           
 section(class='container py-[30px] columns-2 gap-[10px]') 
  p(class='text-dark-blue') Copyright 2024, Finsweet.com ❤ By 
   a(href="https://github.com/YassineInbach/Finsweet" target="_blank") 
