--- a/src/includes/header.pug
+++ b/src/includes/header.pug
@@ -1,10 +1,10 @@
-div(class='container flex justify-between')
+div(class='container flex justify-between max-xl:flex-wrap max-md:!justify-between max-xl:justify-center')
  block logo
   a(href="./index.html" , class=('text-base text-white'))
    img(src="./assets/images/logo.png", alt="logo-finsweet" , class=('align-sub mr-[5px]') , loading="lazy")
    |Finsweet  
- nav(id="menu" , class='flex space-x-[48px]')
-  ul(class='flex space-x-[32px]') 
+ nav(id="menu" , class='navigation max-md:display-none flex gap-x-[48px]')
+  ul(class='flex gap-x-[32px]') 
    li
     a(href="./index.html" , class='link active') Home
    li 
@@ -18,3 +18,5 @@ div(class='container flex justify-between')
    li  
     a(href="./blog.html" , class='link') Blog
   a(href="./contact.html" , class='btn') Contact us   
+ button(class='display-none bg-transparent max-md:absolute max-md:right-[40px] max-md:block') 
+  img(src="./assets/images/bars-solid.svg", alt="img-bars" , class='w-[40px]') 
