--- a/src/pages/features.pug
+++ b/src/pages/features.pug
@@ -12,11 +12,9 @@ block content
     section(class="bg-tint-blue")
       div(class="container flex justify-between max-md:flex-col gap-y-11") 
         div(class="max-w-[485px] max-md:max-w-full") 
-          h1(class="text-white mb-[24px]") All the features you need
-          p(class="text-grey mb-[48px]") Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
-          ul(class="flex space-x-[40px]") 
-            li
-              a(href="./pricing.html" , class="btn") View Pricing
+          h2(class="text-white mb-[24px]") All the features you need
+          p(class="text-grey mb-[48px]") Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.    
+          a(href="./pricing.html" , class="btn") View Pricing
         img(src="./assets/images/feature.svg", alt="feature" , class="hero-section__img max-md:w-[90%]" , loading="lazy") 
   block list-images
    ul(class="container flex justify-center flex-wrap gap-9 mt-[70px] ") 
@@ -59,11 +57,11 @@ block content
      div(class='max-w-[409px] max-lg:max-w-full')
       h2(class='mb-[16px]') Frequently asked questions
       a(href="./contact.html" , class='text-royal-blue') Contact us for more info
-     div(class='w-[50%] max-lg:w-full')
-      each item in info_accordion 
-       details(class='accordion_details' , open=item.type)
-        summary(class="summary_after flex justify-between space-x-2 mb-3") 
-         div(class="flex gap-x-7")
-          h4(class='text-base text-royal-blue font-medium')=item.num
-          h3(class='font-medium')=item.title
-        p(class='mx-auto max-w-[540px] mb-[20px]')=item.describe  
+     div(class='w-[50%] max-lg:w-full max-lg:px-[20px]')
+      ul
+       each item in info_accordion
+        li(class="list-square")
+         details(class='accordion_details' , open=item.type)
+          summary(class="summary_after flex justify-between space-x-2 mb-3") 
+            h3(class='font-medium')=item.title
+          p(class='mx-auto max-w-[600px] mb-[20px] max-lg:max-w-full')=item.describe
