--- a/src/pages/layout.pug
+++ b/src/pages/layout.pug
@@ -14,7 +14,7 @@ html(lang="en")
         script(src="./assets/js/main.js" defer)
     body
     
-     header(class='bg-tint-blue py-[34px]')
+     header(class='relative bg-tint-blue py-[34px]')
       include ../includes/header
 
      main 
