--- a/src/pages/work.pug
+++ b/src/pages/work.pug
@@ -9,7 +9,7 @@ block content
   block section__contenu
    div(class='mx-auto max-w-[733px] text-center px-3')
     span What we created
-    h1(class='mb-[16px]') Our Work Portfolio
+    h2(class='mb-[16px]') Our Work Portfolio
     p We help teams create great digital products by providing them with tools and technology to make the design-to-code process universally accessible.
   block list_icons
    ul(class="list_icons")
@@ -26,15 +26,15 @@ block content
       a(href="https://www.linkedin.com/company/linkd-pro" target="_blank") 
        i(class="fa-brands fa-linkedin")   
  section(class='container')
-  ul(class='flex justify-center gap-x-11')
+  ul(class='flex justify-center gap-x-[35px] flex-wrap')
    li 
-    a(href="#" , class="menu_active menu_works" , data-menu="1" ) All
+    button(class="menu_active menu_works p-0 bg-white" , data-menu="1" ) All
    li 
-    a(href="#" , class="menu_works" , data-menu="2" ) UI Design
+    button(class="menu_works p-0 bg-white" , data-menu="2" ) UI Design
    li 
-    a(href="#" , class="menu_works" , data-menu="3" ) Webflow Design
+    button(class="menu_works p-0 bg-white" , data-menu="3" ) Webflow Design
    li 
-    a(href="#" , class="menu_works" , data-menu="4" ) Figma Design      
+    button(class="menu_works p-0 bg-white" , data-menu="4" ) Figma Design      
   div(id="gallerie_works" , class="style-gallerie_works")
   block section__contenu
    div(class='mx-auto max-w-[733px] text-center mt-[128px]')
